# double-shovel

./: .gitignore  Makefile  Readme.md  package.json
frontend/: package.json
frontend/src/: App.vue  main.js  splash.html
frontend/src/components/: CommandWindow.vue  FileList.vue  HelloWorld.vue
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
