[package]
name = "double-shovel"
version = "0.1.0"
description = "Double Shovel"
authors = ["happyshovels"]
license = ""
repository = ""
default-run = "double-shovel"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.0" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta.1", features = ["api-all"] }
open = "1.7"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.dev]
split-debuginfo = "unpacked"
